started working on integrating the database | moved some Files